--- a/templates/video-processing.html
+++ b/templates/video-processing.html
@@ -53,7 +53,10 @@
                 </div>
                 <div id="video-result" class="text-center text-lg text-gray-700 mt-4"></div>
                 <div id="video-player" class="mt-4 hidden">
-                    <video id="video-element" controls class="w-full max-w-md mx-auto"></video>
+                    <div class="relative">
+                        <video id="video-element" controls class="w-full max-w-md mx-auto"></video>
+                        <canvas id="highlight-canvas" class="absolute top-0 left-0 w-full h-full pointer-events-none"></canvas>
+                    </div>
                     <div class="mt-2">
                         <button id="prev-frame" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">Prev Frame</button>
                         <button id="next-frame" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300 ml-2">Next Frame</button>
