--- a/templates/image-processing.html
+++ b/templates/image-processing.html
@@ -64,8 +64,8 @@
                     <div id="image-fake-files" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div>
                 </div>
                 <div id="image-no-face-section" class="section-container hidden">
-                    <!-- <h2 class="section-title">No Face Detected</h2>
-                    <div id="image-no-face-files" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div> -->
+                    <h2 class="section-title">No Face Detected</h2>
+                    <div id="image-no-face-files" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div>
                 </div>
             </div>
         </section>
