--- a/templates/video-processing.html
+++ b/templates/video-processing.html
@@ -48,9 +48,10 @@
     <div id="video-preview" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mt-4 hidden"></div>
     <div id="video-progress" class="mt-4 hidden">
         <div class="progress-container">
-            <div id="video-progress-bar" class="progress-bar"></div>
+            <div id="video-progress-bar" class="progress-bar transition-all duration-300"></div>
         </div>
         <div id="video-progress-text" class="progress-text">0%</div>
+        <div id="video-status-text" class="text-center text-sm text-gray-600 mt-1"></div>
     </div>
     <div id="video-result" class="text-center text-lg text-gray-700 mt-4"></div>
     <div id="video-player" class="mt-4 hidden">
